compiler/tests/fa/errors/const_index_write.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
تابع اصلی:
    ثابت ث : صحیح[3] = [1, 2, 3]
    ث[0] = 9
پایان
